--- a/frontend/villaizan2d/src/app/components/menu/menu.css
+++ b/frontend/villaizan2d/src/app/components/menu/menu.css
@@ -1,4 +1,7 @@
 .menu-container {
+  position: fixed; /* Fija el menú en la posición */
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 80px;
   background: linear-gradient(to bottom, #e63946, #b2182b);
@@ -7,7 +10,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
+  z-index: 9999; /* Asegura que el menú esté en la capa superior */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: width 0.3s ease;
 }
+
 
 .menu-logo {
   margin-bottom: 20px;
